logs/client_compile.log
src\minecraft\net\HackChi3\chatMod\hypixel\HypixelPlayers.java:41: error: method references are not supported in -source 1.6
        final List<GameProfile> list = Minecraft.getMinecraft().thePlayer.sendQueue.getPlayerInfoMap().stream().map(NetworkPlayerInfo::getGameProfile).collect(Collectors.toList());
                                                                                                                                       ^
  (use -source 8 or higher to enable method references)
src\minecraft\net\HackChi3\chatMod\hypixel\HypixelPlayers.java:72: error: lambda expressions are not supported in -source 1.6
                new Thread(() -> {
                              ^
  (use -source 8 or higher to enable lambda expressions)
src\minecraft\net\HackChi3\chatMod\SpellCecker\SpellChecker.java:23: error: diamond operator is not supported in -source 1.6
    private static List<Word> words = new ArrayList<>();
                                                    ^
  (use -source 7 or higher to enable diamond operator)
src\minecraft\net\HackChi3\chatMod\SpellCecker\Word.java:9: error: diamond operator is not supported in -source 1.6
    private final List<String> words = new ArrayList<>();
                                                     ^
  (use -source 7 or higher to enable diamond operator)
src\minecraft\net\HackChi3\event\Event.java:48: error: multi-catch statement is not supported in -source 1.6
                catch (IllegalAccessException | InvocationTargetException e)
                                              ^
  (use -source 7 or higher to enable multi-catch statement)
src\minecraft\net\HackChi3\gui\JekasMenu\ListMods.java:195: error: diamond operator is not supported in -source 1.6
        final List<Module> modules = new ArrayList<>();
                                                   ^
  (use -source 7 or higher to enable diamond operator)
src\minecraft\net\HackChi3\modules\Module.java:13: error: diamond operator is not supported in -source 1.6
    private final List<Component> options = new ArrayList<>();
                                                          ^
  (use -source 7 or higher to enable diamond operator)
src\minecraft\net\minecraft\client\gui\GuiNewChat.java:27: error: diamond operator is not supported in -source 1.6
    private final List<String> texts = new ArrayList<>();
                                                     ^
  (use -source 7 or higher to enable diamond operator)
src\minecraft\net\minecraft\client\renderer\EntityRenderer.java:328: error: multi-catch statement is not supported in -source 1.6
            catch (IOException | JsonSyntaxException ioexception)
                               ^
  (use -source 7 or higher to enable multi-catch statement)
src\minecraft\net\minecraft\client\renderer\EntityRenderer.java:1384: error: lambda expressions are not supported in -source 1.6
                    crashreportcategory.addCrashSectionCallable("Mouse location", (Callable) () -> String.format("Scaled: (%d, %d). Absolute: (%d, %d)", j1, k1, Mouse.getX(), Mouse.getY()));
                                                                                                ^
  (use -source 8 or higher to enable lambda expressions)
src\minecraft\net\minecraft\tileentity\TileEntity.java:235: error: lambda expressions are not supported in -source 1.6
        reportCategory.addCrashSectionCallable("Name", () -> TileEntity.classToNameMap.get(TileEntity.this.getClass()) + " // " + TileEntity.this.getClass().getCanonicalName());
                                                          ^
  (use -source 8 or higher to enable lambda expressions)
src\minecraft\net\minecraft\util\Util.java:22: error: multi-catch statement is not supported in -source 1.6
        catch (ExecutionException | InterruptedException executionexception)
                                  ^
  (use -source 7 or higher to enable multi-catch statement)
12 errors
